// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email should render 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error 1`] = `
<label
  class="input default left error"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error when invalid value is set 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error when invalid value is set 2`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render null value as empty string 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render when disabled 1`] = `
<label
  class="input default left disabled"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope clickable icon default iconClickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    disabled=""
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render with placeholder 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope icon default"
    />
  </div>
  <input
    placeholder="My placeholder"
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render with value 1`] = `
<label
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="su-envelope clickable icon default iconClickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;
